playbooks/argocd/applications/workloads/jira/jira-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira
  namespace: jira
  labels:
    app: jira
spec:
  selector:
    app: jira
  ports:
    - name: http
      port: 8080
      targetPort: http
