playbooks/argocd/applications/workloads/jira/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-postgres
  namespace: jira
  labels:
    app: jira-postgres
spec:
  selector:
    app: jira-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
